# ChatVoiceStudy-

./: .gitignore  README.md
AudioInput/: AudioInput  AudioInput.pro  inputaudio.cpp  inputaudio.h  main.cpp
AudioOutput/: AudioOutput  AudioOutput.pro  main.cpp  outputaudio.cpp  outputaudio.h  test.raw
RPGStudioServer/: CMakeLists.txt  main.cpp
RPGStudioServer/controlerServer/headers/: controler.hh
RPGStudioServer/controlerServer/sources/: controler.cpp
SimpleChatServer/: Makefile  SimpleChatServer  SimpleChatServer.pro  chatserver.cpp  chatserver.h  main.cpp  moc_chatserver.cpp  moc_predefs.h  moc_servercanal.cpp  moc_serverworker.cpp  server.cpp  server.h  servercanal.cpp  servercanal.h  serverworker.cpp  serverworker.h
StartedAudio/: Makefile  StartedAudio.pro  main.cpp  outputaudio.cpp  outputaudio.h
client-application/: Makefile  chatclient.cpp  chatclient.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  client-application  client-application.pro  client-application.pro.user.8447712  main.cpp  mainwindow.h  mainwindow.ui  moc_chatclient.cpp  moc_chatwindow.cpp  ui_chatwindow.h
